--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,12 +1,12 @@
-mat-toolbar{
-    position:relative;
-    z-index: 5;
-}
+.sidenav{
+    background: black;
+    transition: all .5s ease;
+    position:fixed;
+    z-index: 1;
+    top: 0;
+    width: 5rem;
+    height: 100vh;
+    box-shadow: 0.063rem 0 1.25rem 0 #8690a3;
 
-.content{
-    padding: 24px;
-}
-
-mat-sidenav-container{
-    height: calc(100vh-64px);
+    
 }
