--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,13 +2,11 @@
     <div class="logo-container">
         <button class="logo">A</button>
         <div class="logo-text" *ngIf="collapsed">Angular</div>
-        <button class="btn-close"*ngIf="collapsed"><span class="material-symbols-outlined">
-            close
-            </span></button>
+        <button class="btn-close"*ngIf="collapsed"></button>
     </div>
     <ul class="sidenav-nav">
         <li class="sidenav-nav-item" *ngFor="let data of items">
-            <a href="" class="sidenav-link-link" [routerLink]="[data.route]">
+            <a href="" class="sidenav-nav-link" [routerLink]="[data.route]">
                 <span [innerHTML]="data.icon"></span>
                 <span class="sidenav-link-text" *ngIf="collapsed">{{data.label}}</span>
             </a>
