--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -4,8 +4,8 @@
     position:fixed;
     z-index: 1;
     top: 0;
-/*     width: 5rem; */
-width: 16.5625rem;
+    width: 5rem; 
+/* //width: 16.5625rem; */
     height: 100vh;
     box-shadow: 0.063rem 0 1.25rem 0 #8690a3;
 
