--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-navbar></app-navbar>
+<app-navbar (onToggleSideNav)="onTogleSideNav($event)"></app-navbar> 
+<!-- <router-outlet></router-outlet> -->
+ <app-home [collapsed]="isSidenavCollapsed" [screenWidth]="screenWidth" ></app-home>
