--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,14 @@
-<div class="body" [ngClass]="getBodyClass()">
-    <router-outlet></router-outlet>
-
-
-</div>
+<div class="dashboard-container">
+    <header class="dashboard-header">
+      <h1 class="mat-headline-2">HOLA ESCUELA</h1>
+      <p class="mat-subtitle-1">Bienvenid a tu espacio de gestión de la formación</p>
+    </header>
+    <div class="dashboard-grid">
+      <mat-card *ngFor="let button of buttons" [ngClass]="['dashboard-button', button.color]">
+        <mat-card-content>
+          <mat-icon>{{button.icon}}</mat-icon>
+          <p>{{button.text}}</p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
