--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-navbar (onToggleSideNav)="onTogleSideNav($event)"></app-navbar> 
 <!-- <router-outlet></router-outlet> -->
- <app-home [collapsed]="isSidenavCollapsed" [screenWidth]="screenWidth" ></app-home>
+ <app-body [collapsed]="isSidenavCollapsed" [screenWidth]="screenWidth" ></app-body>
