--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,14 @@
+
 <div class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed':''">
     <div class="logo-container">
-        <button class="logo" (click)="toggleCollapse()">A</button>
+        <button class="logo" (click)="toggleCollapse()"><i class="material-icons sidenav-link-icon">school</i></button>
         <div class="logo-text" @fadeInOut *ngIf="collapsed">Angular</div>
-        <button class="btn-close" @rotate  *ngIf="collapsed" (click)="closeSidenav()"><i class="material-icons sidenav-link-icon">close</i></button>
+        <button class="btn-close" @rotate  *ngIf="collapsed" (click)="closeSidenav()"><i class="material-icons sidenav-link-icon icon">close</i></button>
     </div>
     <ul class="sidenav-nav">
         <li class="sidenav-nav-item" *ngFor="let data of items">
             <a href="" class="sidenav-nav-link" [routerLink]="[data.route]" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-                <span [innerHTML]="data.icon"></span>
+                <i class="material-icons sidenav-link-icon">{{data.icon}}</i>
                 <span class="sidenav-link-text" @fadeInOut *ngIf="collapsed">{{data.label}}</span>
             </a>
         </li>
