--- a/src/app/feature/LoginModule/login/login.component.html
+++ b/src/app/feature/LoginModule/login/login.component.html
@@ -1,41 +1,28 @@
 <div class="login-container">
-  <div class="login-card">
-    <div class="image-container">
-      <div class="image-wrapper">
-        <div class="image-background"></div>
-        <img src="/assets/placeholder.svg" alt="Person studying" class="study-image">
-      </div>
-      <div class="tags">
-        <span class="tag tag-story">STORY</span>
-        <span class="tag tag-literature">LITERATURE</span>
-      </div>
-    </div>
-    <div class="form-container">
-      <h1>ONLINE EDUCATION</h1>
-      <p class="subtitle">Lorem ipsum dolor sit amet ipsum dolor</p>
-      <form (ngSubmit)="onSubmit()" class="form">
-        <input
-          type="text"
-          placeholder="Username"
-          [(ngModel)]="username"
-          name="username"
-          class="input-field"
-        >
-        <input
-          type="password"
-          placeholder="Password"
-          [(ngModel)]="password"
-          name="password"
-          class="input-field"
-        >
-        <div class="forgot-password">
-          <a href="#">Forgot Password?</a>
-        </div>
-        <button type="submit" class="submit-button">Sign in</button>
+    <mat-card>
+    <mat-card-header>
+      <mat-card-title>Login</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <mat-form-field appearance="outline">
+          <mat-label>Email</mat-label>
+          <input matInput type="email" formControlName="email" required>
+          <mat-error *ngIf="email?.errors?.['required']">Email is required</mat-error>
+          <mat-error *ngIf="email?.errors?.['email']">Please enter a valid email address</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Password</mat-label>
+          <input matInput type="password" formControlName="password" required>
+          <mat-error *ngIf="password?.errors?.['required']">Password is required</mat-error>
+          <mat-error *ngIf="password?.errors?.['minlength']">Password must be at least 6 characters long</mat-error>
+        </mat-form-field>
+
+        <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">
+          Login
+        </button>
       </form>
-      <p class="footer-text">
-        Lorem ipsum dolor sit amet ipsum dolor
-      </p>
-    </div>
-  </div>
+    </mat-card-content>
+  </mat-card>
 </div>
