--- a/src/app/feature/inicio/navbar/navbar.component.html
+++ b/src/app/feature/inicio/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 
-<div class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed':''">
+<div class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed':''" ><!-- *ngIf="islogin" -->
     <div class="logo-container">
         <button class="logo" (click)="toggleCollapse()"><i class="material-icons sidenav-link-icon">school</i></button>
-        <div class="logo-text" @fadeInOut *ngIf="collapsed">Angular</div>
+        <div class="logo-text" @fadeInOut *ngIf="collapsed">DevMinds</div>
         <button class="btn-close" @rotate  *ngIf="collapsed" (click)="closeSidenav()"><i class="material-icons sidenav-link-icon icon">close</i></button>
     </div>
     <ul class="sidenav-nav">
