modulo gestion cursos y visualizar cursos

--- a/src/app/feature/inicio/home/home.component.html
+++ b/src/app/feature/inicio/home/home.component.html
@@ -20,8 +20,8 @@
         </mat-menu>
       </div>
     <header class="dashboard-header">
-      <h1 class="mat-headline-2">HOLA ESCUELA</h1>
-      <p class="mat-subtitle-1">Bienvenid a tu espacio de gestión de la formación</p>
+      <h1 class="mat-headline-2">DevMinds <i class="material-icons sidenav-link-icon brain">{{icon}}</i></h1>
+      <p class="mat-subtitle-1">Bienvenido/a a tu espacio de gestión de la formación</p>
     </header>
     <div class="dashboard-grid">
       <mat-card *ngFor="let button of buttons" [ngClass]="['dashboard-button', button.color]">
