--- a/src/app/feature/inicio/home/home.component.css
+++ b/src/app/feature/inicio/home/home.component.css
@@ -91,23 +91,13 @@
     background-color: #f3e5f5;
     color: #7b1fa2;
   }
-  .blue {
-    background-color: #e3f2fd;
-    color: #1976d2;
-  }
-  .red {
-    background-color: #ffebee;
-    color: #d32f2f;
-  }
-  .green {
-    background-color: #e8f5e9;
-    color: #388e3c;
-  }
-  .yellow {
-    background-color: #fffde7;
-    color: #fbc02d;
-  }
   .grey {
     background-color: #f5f5f5;
     color: #616161;
+  }
+  .brain{
+    font-size: 3.5rem;
+    height: 2.5rem;
+    width: 2.5rem;
+    margin-bottom: 1rem;
   }
