--- a/src/app/feature/EstudiantesModule/tabla-estudiantes/tabla-estudiantes.component.html
+++ b/src/app/feature/EstudiantesModule/tabla-estudiantes/tabla-estudiantes.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <h1>Gestionar Cursos</h1>
-    <p>Realizar altas,bajas y modificar cursos!</p>
+    <h1>Gestionar Estudiantes</h1>
+    <p>Realizar altas,bajas y modificar estudiantes!</p>
     
   </div>
 
@@ -20,14 +20,14 @@
         <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="tipo">
-        <th mat-header-cell *matHeaderCellDef> Tipo </th>
-        <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
+      <ng-container matColumnDef="apellido">
+        <th mat-header-cell *matHeaderCellDef> apellido </th>
+        <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="descripcion">
-        <th mat-header-cell *matHeaderCellDef> Descripcion </th>
-        <td mat-cell *matCellDef="let element"> {{element.descripcion }} </td>
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef> email </th>
+        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
       </ng-container>
   
       <ng-container matColumnDef="fechaAlta">
@@ -45,10 +45,10 @@
             <mat-icon class="icon-add">add</mat-icon>
           </button> </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-icon-button class="btn-editar" (click)="editarClase(element)">
+          <button mat-icon-button class="btn-editar" (click)="editarEstudiante(element)">
             <mat-icon class="icon-edit">edit</mat-icon>
           </button>
-          <button mat-icon-button class="btn-eliminar" (click)="eliminarClase(element.id)">
+          <button mat-icon-button class="btn-eliminar" (click)="eliminarEstudiante(element.id)">
             <mat-icon class="icon-delete">delete</mat-icon>
           </button>
         </td>
