--- a/src/app/feature/LoginModule/login/login.component.css
+++ b/src/app/feature/LoginModule/login/login.component.css
@@ -3,24 +3,16 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f5f5f5;
 }
-
 mat-card {
   max-width: 400px;
   width: 100%;
-  padding: 20px;
 }
-
 mat-form-field {
   width: 100%;
   margin-bottom: 16px;
 }
-
-button {
-  width: 100%;
-}
-
-mat-card-title {
-  margin-bottom: 20px;
+.register-section {
+  margin-top: 20px;
+  text-align: center;
 }
