--- a/src/app/feature/LoginModule/login/login.component.html
+++ b/src/app/feature/LoginModule/login/login.component.html
@@ -1,28 +1,41 @@
 <div class="login-container">
-    <mat-card>
+  <mat-card>
     <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
+    <mat-card-title>Ingrese al sistema</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <mat-form-field appearance="outline">
           <mat-label>Email</mat-label>
           <input matInput type="email" formControlName="email" required>
-          <mat-error *ngIf="email?.errors?.['required']">Email is required</mat-error>
-          <mat-error *ngIf="email?.errors?.['email']">Please enter a valid email address</mat-error>
+          @if (email?.errors?.['required'] && (email?.dirty || email?.touched)) {
+            <mat-error>El email es requerido</mat-error>
+          }
+          @if (email?.errors?.['email'] && (email?.dirty || email?.touched)) {
+            <mat-error>por favor, ingrese un email valido</mat-error>
+          }
         </mat-form-field>
 
         <mat-form-field appearance="outline">
-          <mat-label>Password</mat-label>
+          <mat-label>Contraseña</mat-label>
           <input matInput type="password" formControlName="password" required>
-          <mat-error *ngIf="password?.errors?.['required']">Password is required</mat-error>
-          <mat-error *ngIf="password?.errors?.['minlength']">Password must be at least 6 characters long</mat-error>
+          @if (password?.errors?.['required'] && (password?.dirty || password?.touched)) {
+            <mat-error>La contraseña es requerida</mat-error>
+          }
+          @if (password?.errors?.['minlength'] && (password?.dirty || password?.touched)) {
+            <mat-error>La contraseña debe contener al menos 6 caracteres</mat-error>
+          }
         </mat-form-field>
 
         <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">
           Login
         </button>
       </form>
+      
+      <div class="register-section">
+        <p>¿Aun no tienes cuenta?</p>
+        <button mat-button color="accent" (click)="openRegistrationDialog()">Registrate aqui</button>
+      </div>
     </mat-card-content>
   </mat-card>
 </div>
