--- a/src/app/feature/inicio/navbar/navbar.component.html
+++ b/src/app/feature/inicio/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-<div class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed':''" ><!-- *ngIf="islogin" -->
+<div class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed':''"   ><!-- -->
     <div class="logo-container">
         <button class="logo" (click)="toggleCollapse()"><i class="material-icons sidenav-link-icon">school</i></button>
         <div class="logo-text" @fadeInOut *ngIf="collapsed">DevMinds</div>
