--- a/src/app/feature/CursoModule/GestionarCursos/tabla-cursos/tabla-cursos.component.html
+++ b/src/app/feature/CursoModule/GestionarCursos/tabla-cursos/tabla-cursos.component.html
@@ -41,14 +41,14 @@
       </ng-container>
   
       <ng-container matColumnDef="acciones">
-        <th mat-header-cell *matHeaderCellDef>     <button mat-icon-button  class="btn-agregar" (click)="agregarClase()">
+        <th mat-header-cell *matHeaderCellDef>     <button mat-icon-button  class="btn-agregar" (click)="agregarCurso()">
             <mat-icon class="icon-add">add</mat-icon>
           </button> </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-icon-button class="btn-editar" (click)="editarClase(element)">
+          <button mat-icon-button class="btn-editar" (click)="editarCurso(element)">
             <mat-icon class="icon-edit">edit</mat-icon>
           </button>
-          <button mat-icon-button class="btn-eliminar" (click)="eliminarClase(element.id)">
+          <button mat-icon-button class="btn-eliminar" (click)="eliminarCurso(element.id)">
             <mat-icon class="icon-delete">delete</mat-icon>
           </button>
         </td>
