--- a/src/app/feature/EstudiantesModule/tabla-estudiantes/tabla-estudiantes.component.html
+++ b/src/app/feature/EstudiantesModule/tabla-estudiantes/tabla-estudiantes.component.html
@@ -41,11 +41,11 @@
       </ng-container>
   
       <ng-container matColumnDef="acciones">
-        <th mat-header-cell *matHeaderCellDef>     <button mat-icon-button  class="btn-agregar" (click)="agregarClase()">
+        <th mat-header-cell *matHeaderCellDef>     <button mat-icon-button  class="btn-agregar" (click)="agregarEstudiante()" ><!--  -->
             <mat-icon class="icon-add">add</mat-icon>
           </button> </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-icon-button class="btn-editar" (click)="editarEstudiante(element)">
+          <button mat-icon-button class="btn-editar"  (click)="editarEstudiante(element)"><!-- -->
             <mat-icon class="icon-edit">edit</mat-icon>
           </button>
           <button mat-icon-button class="btn-eliminar" (click)="eliminarEstudiante(element.id)">
