--- a/src/app/feature/CursoModule/GestionarCursos/tabla-cursos/tabla-cursos.component.html
+++ b/src/app/feature/CursoModule/GestionarCursos/tabla-cursos/tabla-cursos.component.html
@@ -22,7 +22,22 @@
   
       <ng-container matColumnDef="tipo">
         <th mat-header-cell *matHeaderCellDef> Tipo </th>
-        <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.nombreCurso}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="periodo">
+        <th mat-header-cell *matHeaderCellDef> Periodo </th>
+        <td mat-cell *matCellDef="let element"> {{element.periodo}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="docente">
+        <th mat-header-cell *matHeaderCellDef> Docente </th>
+        <td mat-cell *matCellDef="let element"> {{element.docente}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="horario">
+        <th mat-header-cell *matHeaderCellDef> Horario </th>
+        <td mat-cell *matCellDef="let element"> {{element.horario}} </td>
       </ng-container>
 
       <ng-container matColumnDef="descripcion">
