--- a/src/app/feature/EstudiantesModule/dialog-estudiantes/dialog-estudiantes.component.css
+++ b/src/app/feature/EstudiantesModule/dialog-estudiantes/dialog-estudiantes.component.css
@@ -9,3 +9,24 @@ h1{
    font-size: 15px;
    font-weight: bold;
 }
+
+.btn-cancelar{
+    width: 60px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    background-color: red;
+    color: aliceblue;
+    font-weight: bold;
+}
+
+.btn-guardar{
+    width: 60px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    margin-left: 5px;
+    background-color: green;
+    color: aliceblue;
+    font-weight: bold;
+}
