--- a/src/app/feature/EstudiantesModule/tabla-estudiantes/tabla-estudiantes.component.html
+++ b/src/app/feature/EstudiantesModule/tabla-estudiantes/tabla-estudiantes.component.html
@@ -1,10 +1,7 @@
 <div class="container">
     <h1>Gestionar Estudiantes</h1>
-    <p>Realizar altas,bajas y modificar estudiantes!</p>
-    
-  </div>
-
-
+    <p>Realizar altas,bajas y modificar estudiantes!</p>  
+</div>
 
 
 <div class="mat-elevation-z8">
@@ -21,12 +18,12 @@
       </ng-container>
   
       <ng-container matColumnDef="apellido">
-        <th mat-header-cell *matHeaderCellDef> apellido </th>
+        <th mat-header-cell *matHeaderCellDef> Apellido </th>
         <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
       </ng-container>
 
       <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef> email </th>
+        <th mat-header-cell *matHeaderCellDef> Email </th>
         <td mat-cell *matCellDef="let element"> {{element.email}} </td>
       </ng-container>
   
