--- a/src/app/feature/CursoModule/GestionarCursos/tabla-cursos/tabla-cursos.component.html
+++ b/src/app/feature/CursoModule/GestionarCursos/tabla-cursos/tabla-cursos.component.html
@@ -22,7 +22,7 @@
   
       <ng-container matColumnDef="tipo">
         <th mat-header-cell *matHeaderCellDef> Tipo </th>
-        <td mat-cell *matCellDef="let element"> {{element.nombreCurso}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.nombreTipo}} </td>
       </ng-container>
 
       <ng-container matColumnDef="periodo">
