--- a/src/app/feature/CursoModule/cursos/cursos.component.css
+++ b/src/app/feature/CursoModule/cursos/cursos.component.css
@@ -20,6 +20,7 @@ p {
   width: 100%;
   max-width: 350px;
   margin: 16px;
+  border-radius: 20px;
   transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
@@ -63,8 +64,13 @@ p {
 
 
 .curso-imagen-placeholder {
-  background-color: #f3e5f5;
-  color: #7b1fa2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  background-color: black;
+  border-radius: 20px  20px  0 0 ;
+  color: #A594F9;
   height: 150px;
   display: flex;
   align-items: center;
@@ -77,12 +83,12 @@ p {
 /* estilos segun tipo de clases */
 
 .presencial{
-  background-color: #E5D9F2;
-  color: #A594F9;
+  background-color: #007bff;
+  color: #fff;
 
 }
 
 .virtual{
-  background-color:#FFE6E6 ;
-  color: #AD88C6;
+  background-color:#17a2b8;
+  color: #fff;
 }
