--- a/src/app/feature/inicio/home/home.component.css
+++ b/src/app/feature/inicio/home/home.component.css
@@ -68,7 +68,11 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
-  } *
+    justify-content: center;
+    align-items: center;
+    min-height: 50vh;
+    margin-left: 8%;
+  } 
   .dashboard-button {
     text-align: center;
     padding: 1.5rem;
@@ -102,3 +106,6 @@
     margin-bottom: 1rem;
   }
 
+ 
+
+  
