cambio estilos de pagina 404

--- a/src/app/feature/error-page/error-page.component.html
+++ b/src/app/feature/error-page/error-page.component.html
@@ -1,7 +1,6 @@
 <div class="not-found-container">
-    <div [@waveAnimation]="waveState" class="wave"></div>
-    <h1>404</h1>
-    <h2>Página no encontrada</h2>
-    <p>Lo sentimos, la página que estás buscando no existe.</p>
-    <button mat-raised-button color="primary" (click)="goToHomePage()">Volver al inicio</button>
-  </div>
+ 
+  <img src="../../../assets/404Error2.png" alt="" width="30%" >
+  <h1>Página no encontrada</h1>
+  <p>Lo sentimos, la página que estás buscando no existe o no tiene permisos para acceder</p> 
+</div>
