--- a/src/app/feature/error-page/error-page.component.css
+++ b/src/app/feature/error-page/error-page.component.css
@@ -1,10 +1,4 @@
-:host {
-    display: block;
-    height: 100vh;
-    background-color: #f3e5f5;
-    overflow: hidden;
-    position: relative;
-  }
+
   .not-found-container {
     display: flex;
     flex-direction: column;
@@ -15,26 +9,15 @@
     position: relative;
   }
   h1 {
-    font-size: 8rem;
+    font-size: 3rem;
     color: #7b1fa2;
     margin: 0;
+    margin-bottom: 1rem;
   }
-  h2 {
-    font-size: 2rem;
-    color: #4a148c;
-    margin: 0 0 1rem;
-  }
+
   p {
     font-size: 1.2rem;
     color: #6a1b9a;
     margin-bottom: 2rem;
-  }
-  .wave {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    background: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1440 320" xmlns="http://www.w3.org/2000/svg"><path fill="%239c27b0" fill-opacity="0.5" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,250.7C672,235,768,181,864,181.3C960,181,1056,235,1152,234.7C1248,235,1344,181,1392,154.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>') repeat-x;
-    background-size: 1440px 100px;
+    text-align: center;
   }
